[UPD] Project Dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ spotipy = "^2.20.0"
 dagit = "^1.0.2"
 dagster = "^1.0.2"
 dagster-postgres = "^0.16.4"
+firebase-admin = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
