--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "spotispy"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Luis Malta <luiso.malta@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
