[ADD] Load to postgres

--- a/example.env
+++ b/example.env
@@ -1,3 +1,9 @@
 SPOTIPY_CLIENT_ID=''
 SPOTIPY_CLIENT_SECRET=''
 SPOTIPY_REDIRECT_URI=''
+
+
+POSTGRES_HOST=''
+POSTGRES_DB=''
+POSTGRES_USER=''
+POSTGRES_PASSWORD=''
