--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,11 @@ services:
       SPOTIPY_CLIENT_ID: ${SPOTIPY_CLIENT_ID}
       SPOTIPY_CLIENT_SECRET: ${SPOTIPY_CLIENT_SECRET}
       SPOTIPY_REDIRECT_URI: ${SPOTIPY_REDIRECT_URI}
+
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
   dagster-daemon:
     container_name: dagster-daemon
     build: .
@@ -18,6 +23,11 @@ services:
       SPOTIPY_CLIENT_ID: ${SPOTIPY_CLIENT_ID}
       SPOTIPY_CLIENT_SECRET: ${SPOTIPY_CLIENT_SECRET}
       SPOTIPY_REDIRECT_URI: ${SPOTIPY_REDIRECT_URI}
+
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
   dagster-postgres:
     container_name: dagster-postgres
     image: postgres:13.3
