--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,6 @@
 services:
   dagster-dagit:
+    container_name: dagster-dagit
     build: .
     image: spotispy:latest
     ports:
@@ -9,6 +10,7 @@ services:
       SPOTIPY_CLIENT_SECRET: ${SPOTIPY_CLIENT_SECRET}
       SPOTIPY_REDIRECT_URI: ${SPOTIPY_REDIRECT_URI}
   dagster-daemon:
+    container_name: dagster-daemon
     build: .
     image: spotispy:latest
     command: "dagster-daemon run"
@@ -17,6 +19,7 @@ services:
       SPOTIPY_CLIENT_SECRET: ${SPOTIPY_CLIENT_SECRET}
       SPOTIPY_REDIRECT_URI: ${SPOTIPY_REDIRECT_URI}
   dagster-postgres:
+    container_name: dagster-postgres
     image: postgres:13.3
     ports:
       - 5432:5432
