--- a/dagster.yaml
+++ b/dagster.yaml
@@ -3,30 +3,39 @@ run_storage:
   class: PostgresRunStorage
   config:
     postgres_db:
-      username: postgres
-      password: secret
-      hostname: dagster-postgres
-      db_name: postgres
+      username:
+        env: DAGSTER_POSTGRES_USER
+      password:
+        env: DAGSTER_POSTGRES_PASSWORD
+      db_name:
+        env: DAGSTER_POSTGRES_DB
+      hostname: dagster_server_postgres
       port: 5432
 event_log_storage:
   module: dagster_postgres.event_log
   class: PostgresEventLogStorage
   config:
     postgres_db:
-      username: postgres
-      password: secret
-      hostname: dagster-postgres
-      db_name: postgres
+      username:
+        env: DAGSTER_POSTGRES_USER
+      password:
+        env: DAGSTER_POSTGRES_PASSWORD
+      db_name:
+        env: DAGSTER_POSTGRES_DB
+      hostname: dagster_server_postgres
       port: 5432
 schedule_storage:
   module: dagster_postgres.schedule_storage
   class: PostgresScheduleStorage
   config:
     postgres_db:
-      username: postgres
-      password: secret
-      hostname: dagster-postgres
-      db_name: postgres
+      username:
+        env: DAGSTER_POSTGRES_USER
+      password:
+        env: DAGSTER_POSTGRES_PASSWORD
+      db_name:
+        env: DAGSTER_POSTGRES_DB
+      hostname: dagster_server_postgres
       port: 5432
 run_coordinator:
   module: dagster.core.run_coordinator
