--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dagit = "^1.0.2"
 dagster = "^1.0.2"
 dagster-postgres = "^0.16.4"
 firebase-admin = "^5.2.0"
+more-itertools = "^8.14.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
